--- a/amplify/backend/function/mainLambda/src/package.json
+++ b/amplify/backend/function/mainLambda/src/package.json
@@ -8,7 +8,9 @@
     "aws-serverless-express": "^3.3.5",
     "axios": "^0.26.0",
     "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mongoose": "^6.2.4",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
