--- a/amplify/backend/function/mainLambda/src/package.json
+++ b/amplify/backend/function/mainLambda/src/package.json
@@ -8,9 +8,14 @@
     "aws-serverless-express": "^3.3.5",
     "axios": "^0.26.0",
     "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "mongoose": "^6.2.4",
-    "nodemon": "^2.0.15"
+    "cors": "^2.8.5",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.5",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
